apps/prod/microk8s/www.infomed-stat.ru/ingress/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  # tls:
  # - hosts:
  #   - www.infomed-stat.ru
  #   secretName: https-secret
  rules:
  - host: admin.infomed-stat.ru
    http:
      paths:
      - pathType: Prefix
        path: /cgi-bin/admin/
        backend:
          service:
            name: admin-service
            port:
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ui-service
            port:
              number: 80
      - pathType: Prefix
        path: /cgi-bin
        backend:
          service:
            name: app-service
            port:
              number: 80
      - pathType: Prefix
        path: /images
        backend:
          service:
            name: images-service
            port:
              number: 80
      - pathType: Prefix
        path: /video
        backend:
          service:
            name: images-service
            port:
              number: 80
