apps/prod/microk8s/www.infomed-stat.ru/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'infomed-stat.ru' ) {
        rewrite ^ https://www.infomed-stat.ru$request_uri permanent;
      }
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - www.infomed-stat.ru
    - infomed-stat.ru
    secretName: https-secret
  rules:
  - host: infomed-stat.ru
  - host: www.infomed-stat.ru
    http:
      paths:
      - pathType: Prefix
        path: /images
        backend:
          service:
            name: images-service
            port:
              number: 80
      - pathType: Prefix
        path: /video
        backend:
          service:
            name: images-service
            port:
              number: 80
      - pathType: Prefix
        path: /helpdesk_ticket_attaches
        backend:
          service:
            name: images-service
            port:
              number: 80
      - pathType: Prefix
        path: /cgi-bin
        backend:
          service:
            name: app-service
            port:
              number: 80
      - pathType: Prefix
        path: /api/v1/domain
        backend:
          service:
            name: domain-name-service
            port:
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ui-service
            port:
              number: 80
